# sd-jwt

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: error.rs  lib.rs
src/core/: disclosure.rs  disclosure_hash.rs  jws.rs  keys.rs  mod.rs  sd_jwt.rs  sdjwt.rs
src/core/json_pointer/: mod.rs  path.rs
src/core/jwk/: ecdsa.rs  eddsa.rs  mod.rs  rsa.rs
src/crypto/: backend.rs  error.rs  hash.rs  mod.rs  salt.rs  sign.rs
src/holder/: mod.rs
src/issuer/: decisions.rs  disclosure.rs  input.rs  json_pointer.rs  jws.rs  mod.rs  options.rs  payload.rs  sd_jwt.rs  sdjwt.rs  select.rs  std.rs
src/verifier/: mod.rs
tests/: e2e.rs
tests/test_vectors/: mod.rs  runner.rs  sd_jwt_issuance.rs  specification.rs
tests/test_vectors/testcases/array_data_types/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt
tests/test_vectors/testcases/array_full_sd/: sd_jwt_jws_part.txt
tests/test_vectors/testcases/array_in_sd/: sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/array_nested_in_plain/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/array_none_disclosed/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/array_of_nulls/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/array_of_objects/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt
tests/test_vectors/testcases/array_of_scalars/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/array_recursive_sd/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/array_recursive_sd_some_disclosed/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/header_mod/: kb_jwt_payload.json  kb_jwt_serialized.txt  sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/json_serialization/: kb_jwt_serialized.txt
tests/test_vectors/testcases/key_binding/: kb_jwt_payload.json  kb_jwt_serialized.txt  sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/no_sd/: sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/object_data_types/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/recursions/: sd_jwt_issuance.txt  sd_jwt_jws_part.txt  sd_jwt_presentation.txt
tests/test_vectors/testcases/sample/: kb_jwt_payload.json  sd_jwt_issuance.json  sd_jwt_issuance.txt  sd_jwt_presentation.json  sd_jwt_presentation.txt  specification.yml
