[package]
name = "selective-disclosure-jwt"
version = "0.0.2"
edition = "2021"
description = "Selective Disclosure JWTs"
homepage = "https://github.com/beltram/sd-jwt"
repository = "https://github.com/beltram/sd-jwt"
keywords = ["jwt"]
license = "GPL-3.0-only"

[dependencies]
serde_json = "1.0"
base64 = "0.21"
jwt-simple = "0.11"
thiserror = "1.0"

# crypto
rand_chacha = "0.3"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
