[package]
name = "selective-disclosure-jwt"
version = "0.0.4"
edition = "2021"
description = "Selective Disclosure JWTs"
homepage = "https://github.com/beltram/sd-jwt"
repository = "https://github.com/beltram/sd-jwt"
keywords = ["jwt"]
license = "GPL-3.0-only"

[features]
# TODO: to facilitate dev in early phases, remove once mature enough
default = ["issuer", "holder", "verifier"]
issuer = ["jwt-simple", "base64ct", "rand_chacha", "sha2", "getrandom"]
holder = ["sha2", "jwt-simple", "base64ct"]
verifier = ["jwt-simple", "sha2", "base64ct"]
e2e-test = ["rand-python"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "1.0"
digest = "0.10"
base64-simd = "0.8"

serde-json-python-formatter = "0.1"

# TODO: contribute those changes back
jwt-simple = { version = "0.11", git = "https://github.com/wireapp/rust-jwt-simple", tag = "v0.11.4-pre.core-crypto-1.0.0-pre.1", optional = true }

base64ct = { version = "1.6", optional = true }

derive_more = { version = "1.0.0-beta.3", features = ["from", "as_ref", "into", "deref"] }

# crypto
rand_chacha = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
rand-python = { version = "0.1.0", optional = true }

[dev-dependencies]
selective-disclosure-jwt = { path = ".", features = ["issuer", "holder", "verifier", "e2e-test"] }
wasm-bindgen-test = "0.3.37"
strum = { version = "0.25", features = ["derive"] }
serde = "1.0"
hex = "0.4.3"
